--- a/build.gradle
+++ b/build.gradle
@@ -16,4 +16,5 @@ dependencies {
     testCompile group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
     testCompile group: 'org.mockito', name: 'mockito-core', version: '2.28.2'
     compile group: 'org.jsoup', name: 'jsoup', version: '1.12.1'
+    compile group: 'commons-io', name: 'commons-io', version: '2.6'
 }
