--- a/build.gradle
+++ b/build.gradle
@@ -14,11 +14,14 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     // https://mvnrepository.com/artifact/org.mockito/mockito-core
+    
     testCompile group: 'org.mockito', name: 'mockito-core', version: '2.1.0'
     // jsoup HTML parser library @ https://jsoup.org/
+    
     compile 'org.jsoup:jsoup:1.12.1'
 
-
+    // https://mvnrepository.com/artifact/org.glassfish.jersey.core/jersey-client
+    compile group: 'org.glassfish.jersey.core', name: 'jersey-client', version: '2.6'
 
 
 }
