--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
     testCompile group: 'org.mockito', name: 'mockito-core', version: '2.28.2'
+    testCompile group: 'pl.pragmatists', name: 'JUnitParams', version: '1.1.1'
     compile group: 'org.jsoup', name: 'jsoup', version: '1.12.1'
     compile group: 'commons-io', name: 'commons-io', version: '2.6'
 }
